# Scimitar

./: CMakeLists.txt  DetoursNix.cpp  DetoursNix.hpp  Executable.hpp  ExecutableELF.hpp  ExecutableNative.hpp  ExecutableTest.cpp  ProcMaps.cpp  ProcMaps.hpp  ProcMapsTest.cpp  ScimitarTest.cpp  TODO.txt
Detours/: CMakeLists.txt
Detours/src/: detours.cpp  detours.h  detours_x.cpp  detours_x.h  disasm.cpp
tests/: 1.1.txt  1.txt  2.txt  5.txt  8.1.txt  8.txt
